--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 		<title></title>
 	</head>
 	<body>
-    <img style="width:100px:height:100px;" src="images/eat.jpg"/>
+    <img style="width:100px;height:100px;" src="images/eat.jpg"/>
   </body>
   </html>
