--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-	</head>
-	<body>
-    <img style="width:100px;height:100px;" src="eat.jpg"/>
-  </body>
-  </html>
+<head>
+<meta charset="UTF-8">
+<title></title>
+</head>
+<body>
+	<img src="eat.jpg"/>
+	<img src="seed_sun.jpg"/>	
+</body>
+</html>
