--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<img src="eat.jpg"/>
-	<img src="seed_sun.jpg"/>	
+	<img src="seed_sun.jpg"/>
+	<img src="yuefei.png"/>	
 </body>
 </html>
